--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,14 +1,18 @@
 :root {
     // --color-main: #F61983;
-    // --color-second: #B8948F;
+    // --color-second: #191B37;
     --color-black: #0D0007;
     --color-white: #FFF;
+
+    // --color-second: #F61983;
+    // --color-main: #191B37;
+
 
     --color-main: #3f292b;
     --color-second: #a37b73;
 
     // --color-main: #F61983;
-    // --color-second: #191B37;
+    // --color-second: #B8948F;
 
     // --color-main: #191B37;
     // --color-second: #F61983;
