--- a/src/components/pages/servicesPage/servicesItem/servicesItem.scss
+++ b/src/components/pages/servicesPage/servicesItem/servicesItem.scss
@@ -3,47 +3,72 @@
 .services {
 	display: flex;
 	flex-wrap: wrap;
-    justify-content: space-between;
+	justify-content: center;
 	&__items {
+		position: relative;
 		display: flex;
-		align-items: center;
 		justify-content: center;
-		width: 33.3333%;
-		min-height: 51.9rem;
 		flex-direction: column;
-		max-height: none;
-		height: auto;
-		position: static;
-		padding: 4.4rem 3.4rem;
+		width: 33.3333%;
+		height: 52rem;
+		padding: 4.4rem;
+		justify-content: center;
 		border: solid .1rem var(--color-black);
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
 		&.dark {
-			transition: background-color .5s;
+			&::after {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				display: block;
+				background-color: transparent;
+				z-index: 2;
+				transition: background-color .5s;
+			}
 			.services__items-item {
-				.item-title, .item-descr, .item-price {
-					color: #FFF;
+				.item-title,
+				.item-descr,
+				.item-price {
+					color: #fff;
 				}
 			}
 		}
 		&-item {
-			height: 3.4rem;
+			display: flex;
+			flex-direction: column;
+			position: relative;
+			z-index: 4;
+			height: 6rem;
 			overflow: hidden;
 			transition: height .5s;
+			width: 100%;
 			.item {
 				&-title {
+					flex-shrink: 0;
 					font-weight: 600;
 					text-align: center;
-					padding-bottom: 2.6rem;
+					padding-bottom: 3rem;
 					font-size: 2.4rem;
 				}
 				&-descr {
+					min-height: 0;
 					font-weight: 500;
 					display: flex;
 					flex-direction: column;
 					row-gap: 1.5rem;
 					padding-bottom: 2.6rem;
 					font-size: 1.4rem;
+					white-space: pre-line;
+					overflow-y: hidden;
+					padding-right: 1rem;
 				}
 				&-price {
+					margin-top: 2rem;
 					display: flex;
 					justify-content: center;
 					font-size: 2.4rem;
@@ -54,10 +79,18 @@
 		}
 		&:hover {
 			&.dark {
-				background-color: var(--color-main);
+				&::after {
+					background-color: var(--color-main);
+				}
 			}
 			.services__items-item {
 				height: 100%;
+				overflow: hidden;
+				.item {
+					&-descr {
+						overflow-y: auto;
+					}
+				}
 			}
 		}
 	}
