third section well done

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,7 +2,7 @@
     // --color-main: #F61983;
     // --color-second: #191B37;
     --color-black: #0D0007;
-    --color-white: #FFF;
+    --color-white: #EEF0F2;
 
     // --color-second: #F61983;
     // --color-main: #191B37;
