--- a/src/scss/base/_media.scss
+++ b/src/scss/base/_media.scss
@@ -43,6 +43,9 @@ html {
             height: 48rem;
         }
     }
+    .about {
+        padding: 8rem 4%;
+    }
 }
 
 @media (max-width: 991px) {
@@ -51,6 +54,16 @@ html {
             height: 44rem;
             width: 44%;
             padding: 2.5rem;
+        }
+    }
+    .about {
+        &__text {
+            &-title {
+                font-size: 2.6rem;
+            }
+            &-descr {
+                font-size: 1.3rem;
+            }
         }
     }
 }
@@ -162,6 +175,16 @@ html {
             height: 33rem;
             width: 100%;
             padding: 1.5rem;
+        }
+    }
+    .about {
+        padding: 5rem 4%;
+        flex-direction: column-reverse;
+        &__slider, &__text {
+            width: 100%;
+        }
+        &__slider {
+            height: 40rem;
         }
     }
 }
