--- a/src/components/pages/teamPage/teamMember/teamMember.scss
+++ b/src/components/pages/teamPage/teamMember/teamMember.scss
@@ -3,7 +3,7 @@
 .team__members {
 	display: flex;
     justify-content: space-between;
-    gap: 3rem;
+    gap: 6rem;
 	&-wrapper {
 		height: 40rem;
 		width: 30rem;
@@ -15,13 +15,45 @@
 			color: var(--color-white);
 			text-align: center;
 		}
-		.member-img {
+		.member__img {
+			position: relative;
 			height: 100%;
 			width: 100%;
-			flex: auto 1 1;
-			min-height: 0;
-			object-fit: cover;
+			display: flex;
+			// flex: auto 1 1;
 			border-radius: .3rem;
+			min-height: 0;
+			&-photo {
+				height: 100%;
+				width: 100%;
+				object-fit: cover;
+			}
+			&-link {
+				display: block;
+				content: '';
+				cursor: pointer;
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				.bx-link {
+					color: transparent;
+					position: absolute;
+					font-size: 3rem;
+					bottom: 1rem;
+					left: 50%;
+					transform: translateX(-50%);
+					transition: color .5s;
+				}
+				@media (hover: hover) {
+					&:hover {
+						.bx-link {
+							color: var(--color-main);
+						}
+					}
+				}
+			}
 		}
 		.member-name {
 			font-size: 2.4rem;
